# qrd

./: .gitignore  CMakeLists.txt  README.md
include/: cmd.h  handler.h  init.h
src/: cmd.c  handler.c  init.c  main.c
